# corestate

./: README.md  build.gradle  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle  settings.gradle.kts
.github/: CODEOWNERS
.github/workflows/: android-app.yml  microservices.yml  ml-training.yml  module-build.yml  performance-test.yml  release-orchestration.yml  security-scan.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/terragon/corestate/: MainActivity.kt
app/src/main/java/com/terragon/corestate/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
apps/android/androidApp/: build.gradle.kts
apps/android/androidApp/src/main/: AndroidManifest.xml
apps/android/androidApp/src/main/java/com/corestate/androidApp/: CoreStateApplication.kt  MainActivity.kt
apps/android/androidApp/src/main/java/com/corestate/androidApp/data/repository/: BackupRepository.kt
apps/android/androidApp/src/main/java/com/corestate/androidApp/network/: ApiService.kt
apps/android/androidApp/src/main/java/com/corestate/androidApp/ui/: CoreStateApp.kt
apps/android/androidApp/src/main/java/com/corestate/androidApp/ui/components/: BackupProgressCard.kt  FileSelectionCard.kt  QuickActionCard.kt  StatCard.kt
apps/android/androidApp/src/main/java/com/corestate/androidApp/ui/navigation/: CoreStateNavigation.kt
apps/android/androidApp/src/main/java/com/corestate/androidApp/ui/screens/admin/: SystemAdminScreen.kt
apps/android/androidApp/src/main/java/com/corestate/androidApp/ui/screens/backup/: BackupScreen.kt  BackupViewModel.kt
apps/android/androidApp/src/main/java/com/corestate/androidApp/ui/screens/dashboard/: DashboardScreen.kt  DashboardViewModel.kt
apps/android/androidApp/src/main/java/com/corestate/androidApp/ui/screens/files/: FilesScreen.kt  FilesViewModel.kt
apps/android/androidApp/src/main/java/com/corestate/androidApp/ui/screens/settings/: SettingsScreen.kt  SettingsViewModel.kt
apps/android/androidApp/src/main/java/com/corestate/androidApp/ui/theme/: Color.kt  Theme.kt  Type.kt
apps/android/androidApp/src/main/res/values/: strings.xml
apps/android/shared/: build.gradle.kts
apps/android/shared/src/commonMain/kotlin/sync/: P2PSyncManager.kt
apps/android/shared/src/commonTest/kotlin/: P2PSyncManagerTest.kt
apps/daemon/: Cargo.toml
apps/daemon/src/: android_bridge.rs  backup.rs  config.rs  filesystem.rs  grpc_server.rs  kernel_interface.rs  main.rs
apps/web-dashboard/: package.json
apps/web-dashboard/public/: index.html
apps/web-dashboard/src/: index.js
docs/api/: grpc.md
docs/architecture/: overview.md
docs/deployment/: kubernetes.md
infrastructure/kubernetes/deployments/: backup-engine-deployment.yaml  ml-optimizer-deployment.yaml  storage-hal-deployment.yaml
infrastructure/kubernetes/ingress/: main-ingress.yaml
infrastructure/kubernetes/services/: backup-engine-service.yaml
infrastructure/terraform/: main.tf
ml/models/anomaly_detection/: advanced_anomaly_detector.py  anomaly_detector.py
ml/models/backup_prediction/: advanced_backup_predictor.py  backup_predictor.py
module/: module.prop  post-fs-data.sh  service.sh
module/native/: CMakeLists.txt  Makefile  corestate_module.c
module/native/fs_monitor/: CMakeLists.txt  block_tracker.cpp
module/native/hw_acceleration/: CMakeLists.txt  hsm_integration.cpp
module/native/snapshot_manager/: CMakeLists.txt  cow_snapshot.cpp
services/analytics-engine/: build.sbt
services/analytics-engine/src/main/scala/streaming/: BackupAnalytics.scala
services/backup-engine/: Dockerfile  build.gradle.kts
services/backup-engine/src/main/java/com/corestate/backup/enterprise/: MultiTenantManager.java
services/backup-engine/src/main/kotlin/com/corestate/backup/: BackupEngineService.kt
services/backup-engine/src/main/kotlin/com/corestate/backup/client/: ServiceClients.kt
services/backup-engine/src/main/kotlin/com/corestate/backup/controller/: BackupController.kt
services/backup-engine/src/main/kotlin/com/corestate/backup/distributed/: ChunkDistributor.kt
services/backup-engine/src/main/kotlin/com/corestate/backup/dto/: BackupDTOs.kt
services/backup-engine/src/main/kotlin/com/corestate/backup/model/: BackupExecution.kt  BackupModels.kt
services/backup-engine/src/main/kotlin/com/corestate/backup/repository/: BackupRepositories.kt
services/backup-engine/src/main/kotlin/com/corestate/backup/service/: BackupOrchestrator.kt  BackupServices.kt  RestoreService.kt
services/backup-engine/src/main/kotlin/com/corestate/backup/strategies/: SyntheticBackup.kt
services/backup-engine/src/test/kotlin/com/corestate/backup/: BackupEngineServiceTest.kt
services/compression-engine/: Cargo.toml  Dockerfile
services/compression-engine/benches/: compression_benchmarks.rs
services/compression-engine/src/: compression.rs  main.rs
services/deduplication-service/: Dockerfile  main.py  requirements.txt
services/encryption-service/: Dockerfile  package.json
services/encryption-service/src/: index.ts
services/index-service/: Dockerfile  build.gradle.kts
services/ml-optimizer/: main.py  requirements.txt  test_main.py
services/ml-optimizer/models/: placeholder.txt
services/ml-optimizer/training/: placeholder.txt
services/storage-hal/: Cargo.toml  build.rs
services/storage-hal/src/: erasure_coding.rs  main.rs
services/sync-coordinator/: package.json  tsconfig.json
services/sync-coordinator/src/: index.ts
services/sync-coordinator/src/__tests__/: index.test.ts
services/sync-coordinator/src/crdt/: backup-state.ts
shared/proto/: analytics.proto  backup.proto  storage.proto  sync.proto
tests/e2e/: placeholder.txt
tests/integration/: placeholder.txt
tests/performance/: placeholder.txt
tools/cli/: main.py
