[package]
name = "corestate-daemon"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core async runtime
tokio = { version = "1.34", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Networking and gRPC
tonic = "0.10"
prost = "0.12"
tokio-tungstenite = "0.20"
hyper = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system monitoring
notify = "6.1"
walkdir = "2.4"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

# System interfaces
nix = "0.27"
libc = "0.2"

# Crypto
ring = "0.17"
aes-gcm = "0.10"
[[bin]]
name = "corestate-daemon"
path = "src/main.rs"