[package]
name = "compression-engine"
version = "2.0.0"
edition = "2021"
authors = ["CoreState Team"]
description = "High-performance compression engine for CoreState backup system"
license = "MIT"
repository = "https://github.com/corestate/CoreState-v2"

[dependencies]
# Compression libraries
zstd = "0.13"
lz4 = "1.24"
brotli = "3.4"
flate2 = "1.0"
xz2 = "0.1"

# gRPC and async runtime
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.34", features = ["macros", "rt-multi-thread", "fs", "io-util", "net", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"

# Configuration
config = "0.13"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Async channels
tokio-stream = "0.1"

# Threading
rayon = "1.8"

# Memory mapping
memmap2 = "0.9"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
proptest = "1.4"
criterion = "0.5"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "compression-engine"
path = "src/main.rs"

[[bench]]
name = "compression_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true