[package]
name = "storage-hal"
version = "2.0.0"
edition = "2021"
authors = ["CoreState Team"]
description = "Storage Hardware Abstraction Layer for CoreState backup system"
license = "MIT"
repository = "https://github.com/corestate/CoreState-v2"

[dependencies]
# Erasure coding and compression
reed-solomon-erasure = "6.0"
blake3 = "1.5"
lz4 = "1.24"
zstd = "0.13"

# gRPC and async runtime
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.34", features = ["macros", "rt-multi-thread", "fs", "io-util", "net", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Cloud storage SDKs
aws-sdk-s3 = "0.39"
aws-config = "0.57"
azure_storage = "0.19"
azure_storage_blobs = "0.19"
google-cloud-storage = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"

# Configuration
config = "0.13"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Async channels
tokio-stream = "0.1"

# File system operations
walkdir = "2.4"

# Encryption
ring = "0.17"
aes-gcm = "0.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
proptest = "1.4"
mockall = "0.12"

[build-dependencies]
tonic-build = "0.10"

[features]
default = ["aws", "azure", "gcp"]
aws = []
azure = []
gcp = []
local-only = []

[[bin]]
name = "storage-hal"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true